Recorded the quick-tier re-baseline and the gh #924 A/B
All 46 quick rows in one JVM in table order at the launch flags, replacing the
sixteen-row table of 2026-09-21; every count asserted. Three shared rows measured
11 to 21 % slower than before the gh #924 merge, so they and three controls were
rerun one JVM per row on the pre-merge tip and on the branch: identical within
1 %, the recipe row 265 times faster. The differences were run order, which is
larger than the earlier tables suggested; the note now says that a fix under
20 % is measured in the one-JVM-per-row shape, not from the tier table. The
unstored depth-9 tree is the one quick row that is collector-bound at 4 GB.

The handoff state records the parallel gh #924 session, the void recipe figures,
and the coverage gaps to close before the first fix.